src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Decision_Date__c</fullName>
        <description>The date the offer was either accepted or rejected</description>
        <label>Offer Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Detail__c</fullName>
        <label>Offer Detail $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Status__c</fullName>
        <label>Offer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Customer Answer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Type_del__c</fullName>
        <label>Offer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowe&apos;s RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC - Free of Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar Voucher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Update__c</fullName>
        <description>A field used behind the scenes to trigger a workflow to update the Case Custom Last Modified Date field.</description>
        <label>Settlement Update</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Offer</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <recordTypes>
        <fullName>ConsCCEU_Offer</fullName>
        <active>true</active>
        <description>Consumer Contact Center EU Offer</description>
        <label>ConsCCEU Offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConsCCNA_Offer</fullName>
        <active>true</active>
        <description>Consumer Contact Center North America Offer</description>
        <label>ConsCCNA Offer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>